<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzul"
    tools:context=".UI.auth.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/txtUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_blanco" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAzulDark"
        android:textColorHint="@color/colorAzulDark"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/edtContrase"
        app:layout_constraintEnd_toEndOf="@+id/txtUserName"
        app:layout_constraintStart_toStartOf="@+id/txtUserName"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

    <EditText
        android:id="@+id/edtContrase"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_contraseña"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAzulDark"
        android:textColorHint="@color/colorAzulDark"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnSingUp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <Button
        android:id="@+id/btnSingUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:text="@string/btnSigUp"
        android:textColor="@color/colorAzul"
        app:layout_constraintBottom_toTopOf="@+id/txtGoLogin"
        app:layout_constraintEnd_toEndOf="@+id/edtContrase"
        app:layout_constraintStart_toStartOf="@+id/edtContrase"
        app:layout_constraintTop_toBottomOf="@+id/edtContrase" />

    <TextView
        android:id="@+id/txtGoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_go_login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSingUp"
        app:layout_constraintStart_toStartOf="@+id/btnSingUp"
        app:layout_constraintTop_toBottomOf="@+id/btnSingUp" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintUserName"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAzulDark"
        android:textColorHint="@color/colorAzulDark"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/edtEmail"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>